--- a/submissions/Annabelle Lee - Aeternum/README
+++ b/submissions/Annabelle Lee - Aeternum/README
@@ -1,6 +1,6 @@
-I am a former Fashion Designer hold a Master Degree in Fashion Design in Domus Academy, I understand that Arweave is famous for its endeavor 
-on creating a secure decentralized immutable storage, my idea is to connect my journey to create something interesting on Arweave
+# <Aeternum>
 
+## 简介
 I'm going to build a immutable storage vault for brands like Dior, Chanel, and more, who values brand heritage and design archive 
 to store their years of design work on Arweave, for Arweave is famous for their decentralization, security, and an immutable storage chain, 
 this project will link real world assets from the culture and art to the web3 world, my project starts by building archive vault 
@@ -18,3 +18,13 @@ by showcasing a very simple hello world message to keep a web3 project status, a
 reads data from Arweave, and then, I will upload few fashion images or designs as the samples data from the company end, say, 
 Dior, to Ardrive to make sure this project is a Ardrive native, and will leave protocols to make polish for later
 
+
+## 演示
+- 视频：<https://vimeo.com/1117085578?share=copy#t=26.31>
+
+## 已知限制
+- 简述当前限制或待办。
+
+## 联系方式
+- GitHub: @Funghi88
+- Wallet Address: `<3KWTaHIiZn_WDVmqXoJ45JVK3S_11KfhOT7RNqA_0xM>`
